--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Template ENV untuk dipakai di .env asli
 
-DATABASE_URL=postgres://USER:PASSWORD@localhost:5432/dbname
+DATABASE_URL=postgres://USER:PASSWORD@localhost:5432/alpvp
 JWT_SECRET=YOUR_SECRET_KEY_HERE
 PORT=3000
