--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "node dist/main.js",
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/main.ts",
+    "seed": "ts-node prisma/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
 
   "keywords": [],
